Arreglado bug /experience, overflow

--- a/src/App.css
+++ b/src/App.css
@@ -199,6 +199,7 @@ span {
 .experiencePage-section {
 	width: 100%;
 	height: 100%;
+	overflow-x: auto;
 	/* overflow: hidden; */
 }
 /* .experiencePage-article {
